--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-server.port=8080
+server.port=8089
 server.servlet.context-path=/
 logging.level.root=info
 logging.level.sql=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.sql=info
 logging.level.org.hibernate.type=TRACE
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:54321/crm
+spring.datasource.username=crm
+spring.datasource.password=crm
