--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,13 +1,21 @@
-name: tests
+name: CI
+
 on:
+  pull_request:
   push:
     branches:
-      - master
-      - production
-  pull_request:
-env:
- USING_SELENIUM_HUB: true
+      - 'master'
+
 jobs:
-  Test:
-   name: BasicTest
-   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
