added views for controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:54321/crm
 spring.datasource.username=crm
 spring.datasource.password=crm
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.url=jdbc:postgresql://localhost:54321/crm
+spring.flyway.user=crm
+spring.flyway.password=crm
+spring.flyway.driver-class-name=org.postgresql.Driver
+spring.flyway.enabled=true
