added api controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.flyway.user=crm
 spring.flyway.password=crm
 spring.flyway.driver-class-name=org.postgresql.Driver
 spring.flyway.enabled=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
