--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,13 +5,16 @@ logging.level.org.hibernate.sql=debug
 logging.level.org.hibernate.type=TRACE
 
 spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.url=jdbc:h2:/tmp/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:54321/crm
-#spring.datasource.username=crm
-#spring.datasource.password=crm
+spring.flyway.url=jdbc:h2:mem:testdb
+spring.flyway.user=sa
+spring.flyway.password=password
+spring.flyway.driver-class-name=org.h2.Driver
+spring.flyway.enabled=true
+
+spring.flyway.locations=classpath:/db/migration
+#${user.dir}/src/test/resources
