--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,19 @@
-#server.port=8089
-#server.servlet.context-path=/
-#logging.level.root=info
-#logging.level.sql=debug
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.org.hibernate.sql=debug
-#logging.level.org.hibernate.type=TRACE
-#
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:54321/crm
-#spring.datasource.username=crm
-#spring.datasource.password=crm
-#
-#spring.jpa.hibernate.ddl-auto=none
-#
-#spring.flyway.url=jdbc:postgresql://localhost:54321/crm
-#spring.flyway.user=crm
-#spring.flyway.password=crm
-#spring.flyway.driver-class-name=org.postgresql.Driver
-#spring.flyway.enabled=true
-#
-#spring.jackson.serialization.fail-on-empty-beans=false
+server.port=8089
+server.servlet.context-path=/
+logging.level.root=info
+logging.level.sql=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.type=TRACE
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:54321/crm
+spring.datasource.username=crm
+spring.datasource.password=crm
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration,classpath:db/data
+
+spring.jackson.serialization.fail-on-empty-beans=false
