--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>flyway-core</artifactId>
             <version>8.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
