Added api endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.flyway.locations=classpath:db/migration,classpath:db/data
 
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.servlet.multipart.max-file-size=20MB
+
+spring.servlet.multipart.max-request-size=25MB
+
